@@ -3,13 +3,18 @@ package eu.morozik.transportagency.model.enums;
 import eu.morozik.transportagency.model.enums.Permission;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 public enum Role {
+    //new HashSet<>(Arrays.asList("a", "b"));
 
-    USER(Set.of(Permission.DRIVERS_READ)),
-    ADMIN(Set.of(Permission.DRIVERS_READ, Permission.DRIVERS_WRITE));
+
+    USER(new HashSet<Permission> (Collections.singletonList(Permission.DRIVERS_READ))),
+    ADMIN(new HashSet<Permission>(Arrays.asList(Permission.DRIVERS_READ,Permission.DRIVERS_WRITE)));
 
     private final Set<Permission> permissions;
 
@@ -27,4 +32,11 @@ public enum Role {
                 .collect(Collectors.toSet());
     }
 
+    public static Role getRole(Long i){
+        if (i==1)
+            return USER;
+        if (i==2)
+            return ADMIN;
+        return null;
+    }
 }
